--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/AmitOmjeeSharma/Stock-Market-Predication" class="block-20 zoom-effect" style="background-image: url('images/Stock.png');">
+				<a href="https://github.com/AmitOmjeeSharma/Stock-Market-Predication" class="block-20 zoom-effect" style="background-image: url('images/STOCK.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
