--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2024-Present</span>
+						<span class="date">May 2024-Present</span>
 						<h2>Data Science & Business Analytics intern</h2>
 						<span class="position">The Sparks Foundation</span>
 						<p class="mt-4">The Sparks Foundation empowers young minds by fostering creativity and collaboration to shape the future. Their mission is to inspire, teach innovation and promote integration among students to build a better society. 
