--- a/index.html
+++ b/index.html
@@ -387,6 +387,47 @@
     				</div>
 				</div>
     		</div>
+			<div class="row">
+				<h1 class="big-4">Certificates</h1>
+				<div class="underline"></div>
+			</div>
+			<br>
+
+<div class="row d-flex">
+	<div class="col-md-4 d-flex ftco-animate">
+		<div class="blog-entry justify-content-end">
+		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf" class="block-20 zoom-effect" style="background-image: url('images/Tata.jpg');">
+		</a>
+		<div class="text mt-3 float-right d-block">
+
+		  <h3 class="heading"><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf">Tata Group Data Visualisation: Empowering Business with Effective Insights</a></h3>
+		</div>
+	  </div>
+	</div>
+  <div class="col-md-4 d-flex ftco-animate">
+	  <div class="blog-entry justify-content-end">
+	  <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf" class="block-20 zoom-effect" style="background-image: url('images/BSG_GenAI.jpg');">
+	  </a>
+	  <div class="text mt-3 float-right d-block">
+
+		<h3 class="heading"><a href="hhttps://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf">BCG GenAI: Built a financial AI ChatBot</a></h3>
+	  </div>
+	</div>
+  </div>
+  <!-- <div class="col-md-4 d-flex ftco-animate">
+	  <div class="blog-entry justify-content-end">
+	  <a href="https://github.com/AmitOmjeeSharma/Telegram_Malicious_Activity_Detection" class="block-20 zoom-effect" style="background-image: url('images/TMAD.jpg');">
+	  </a>
+	  <div class="text mt-3 float-right d-block">
+
+		<h3 class="heading"><a href="https://github.com/AmitOmjeeSharma/Telegram_Malicious_Activity_Detection">Telegram Malicious Activity Detection using Python</a></h3>
+		<p>Telegram bot that uses deep learning and natural language processing techniques to detect and flag malicious activities in messages, in order to identify potential threats.</p>
+	  </div>
+	</div>
+  </div> -->
+
+</div>
+<br>
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
