--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">May 2024-Present</span>
-						<h2>Data Science & Business Analytics intern</h2>
+						<span class="date">May 2024 - Jun 2024</span>
+						<h2>Data Science & Business Analytics Intern</h2>
 						<span class="position">The Sparks Foundation</span>
 						<p class="mt-4">The Sparks Foundation empowers young minds by fostering creativity and collaboration to shape the future. Their mission is to inspire, teach innovation and promote integration among students to build a better society. 
 							<ul>
