--- a/index.html
+++ b/index.html
@@ -397,6 +397,17 @@
 			<br>
 
 <div class="row d-flex">
+  <div class="col-md-4 d-flex ftco-animate">
+	  <div class="blog-entry justify-content-end">
+	  <a href="https://pwskills.com/learn/certificate/4cadc768-d205-497b-baa4-9566c86c1822/" class="block-20 zoom-effect" style="background-image: url('images/PW.png');">
+	  </a>
+	  <div class="text mt-3 float-right d-block">
+
+		<h3 class="heading"><a href="https://pwskills.com/learn/certificate/4cadc768-d205-497b-baa4-9566c86c1822/">Physics Wallah: Data Science Masters</a></h3>
+	  </div>
+	</div>
+  </div>
+
 	<div class="col-md-4 d-flex ftco-animate">
 		<div class="blog-entry justify-content-end">
 		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf" class="block-20 zoom-effect" style="background-image: url('images/Tata.jpg');">
@@ -407,6 +418,7 @@
 		</div>
 	  </div>
 	</div>
+
   <div class="col-md-4 d-flex ftco-animate">
 	  <div class="blog-entry justify-content-end">
 	  <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf" class="block-20 zoom-effect" style="background-image: url('images/BSG_GenAI.jpg');">
@@ -417,17 +429,6 @@
 	  </div>
 	</div>
   </div>
-  <!-- <div class="col-md-4 d-flex ftco-animate">
-	  <div class="blog-entry justify-content-end">
-	  <a href="https://github.com/AmitOmjeeSharma/Telegram_Malicious_Activity_Detection" class="block-20 zoom-effect" style="background-image: url('images/TMAD.jpg');">
-	  </a>
-	  <div class="text mt-3 float-right d-block">
-
-		<h3 class="heading"><a href="https://github.com/AmitOmjeeSharma/Telegram_Malicious_Activity_Detection">Telegram Malicious Activity Detection using Python</a></h3>
-		<p>Telegram bot that uses deep learning and natural language processing techniques to detect and flag malicious activities in messages, in order to identify potential threats.</p>
-	  </div>
-	</div>
-  </div> -->
 
 </div>
 <br>
