--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Amit Sharma</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>3 Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>6 Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Nagpur, India</span></p>
 									  </div>
 									</div>
@@ -324,10 +324,44 @@
 		<br>
 		
 		<div class="row">
+
+
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">Aug 2024 - Present</span>
+					<h2>Data Analyst Intern</h2>
+					<span class="position">Red Dot Foundation Global</span>
+					<p class="mt-4">Red Dot Foundation promotes safer cities by crowdsourcing data on sexual harassment, identifying local trends, and working with communities and authorities to prevent violence and create safer spaces. 
+						<ul>
+							<li>Evaluated 4,188 global violence incidents from 1974-2023, identifying trends and patterns using Python and Excel.</li>
+							<li>Designed Power BI dashboards showcasing insights across 10+ categories and identifying safety issues and 6 key hotspots.</li>
+							<li>Boosted report generation efficiency by 15% through streamlined data workflows and advanced visualization techniques.</li>
+						</ul>
+					</p>
+				</div>
+
+			</div>
+
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">Jun 2024 - Jul 2024</span>
+					<h2>Data Analyst Intern</h2>
+					<span class="position">Physics Wallah</span>
+					<p class="mt-4">Physics Wallah is India’s leading EdTech platform, delivering affordable education to 4.6 crore students across 98% of the country. PW’s mission is to make quality education accessible to all. 
+						<ul>
+							<li>Analyzed international debt data from the World Bank from 1970-2022, using Python for data cleaning and preprocessing.</li>
+							<li>Formulated and executed complex SQL queries to derive insights, addressing 9+ project tasks related to global debt trends and patterns.</li>
+							<li>Developed interactive dashboard to demonstrate global debt trends, incorporating 122 country flags via web scraping.</li>
+						</ul>
+					</p>
+				</div>
+
+			</div>
+
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">May 2024 - Jun 2024</span>
-						<h2>Data Science & Business Analytics Intern</h2>
+						<h2>Data Science Intern</h2>
 						<span class="position">The Sparks Foundation</span>
 						<p class="mt-4">The Sparks Foundation empowers young minds by fostering creativity and collaboration to shape the future. Their mission is to inspire, teach innovation and promote integration among students to build a better society. 
 							<ul>
@@ -340,21 +374,7 @@
 
 				</div>
 
-				<!-- <div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">iQuanti</span>
-						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
-							<ul>
-								<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
-								<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
-								<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its feature improvement.</li>
-							</ul>
-						</p>
-					</div>
 
-				</div> -->
 			</div>
 
 		<br>
@@ -397,38 +417,60 @@
 			<br>
 
 <div class="row d-flex">
-  <div class="col-md-4 d-flex ftco-animate">
-	  <div class="blog-entry justify-content-end">
-	  <a href="https://pwskills.com/learn/certificate/4cadc768-d205-497b-baa4-9566c86c1822/" class="block-20 zoom-effect" style="background-image: url('images/PW.png');">
-	  </a>
-	  <div class="text mt-3 float-right d-block">
-
-		<h3 class="heading"><a href="https://pwskills.com/learn/certificate/4cadc768-d205-497b-baa4-9566c86c1822/">Physics Wallah: Data Science Masters</a></h3>
-	  </div>
+	<div class="col-md-4 d-flex ftco-animate">
+		<div class="blog-entry justify-content-end">
+			<a href="https://pwskills.com/learn/certificate/4cadc768-d205-497b-baa4-9566c86c1822/"
+			   class="block-20 zoom-effect" 
+			   style="background-image: url('images/PW.png'); 
+					  background-size: cover; 
+					  background-position: center; 
+					  width: 100%; 
+					  height: 0; 
+					  padding-bottom: 75%; 
+					  border-radius: 12px;">
+			</a>
+			<div class="text mt-3 float-right d-block">
+				<h3 class="heading"><a href="https://pwskills.com/learn/certificate/4cadc768-d205-497b-baa4-9566c86c1822/">Physics Wallah: Data Science Masters</a></h3>
+			</div>
+		</div>
 	</div>
-  </div>
 
 	<div class="col-md-4 d-flex ftco-animate">
 		<div class="blog-entry justify-content-end">
-		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf" class="block-20 zoom-effect" style="background-image: url('images/Tata.jpg');">
-		</a>
-		<div class="text mt-3 float-right d-block">
-
-		  <h3 class="heading"><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf">Tata Group Data Visualisation: Empowering Business with Effective Insights</a></h3>
+			<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf" 
+			   class="block-20 zoom-effect" 
+			   style="background-image: url('images/Tata.jpg'); 
+					  background-size: cover; 
+					  background-position: center; 
+					  width: 100%; 
+					  height: 0; 
+					  padding-bottom: 75%; 
+					  border-radius: 12px;">
+			</a>
+			<div class="text mt-3 float-right d-block">
+				<h3 class="heading"><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Tata/MyXvBcppsW2FkNYCX_Tata%20Group_JiPaHx2ooMwh4Kscc_1712922283979_completion_certificate.pdf">Tata Group Data Visualisation: Empowering Business with Effective Insights</a></h3>
+			</div>
 		</div>
-	  </div>
 	</div>
-
-  <div class="col-md-4 d-flex ftco-animate">
-	  <div class="blog-entry justify-content-end">
-	  <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf" class="block-20 zoom-effect" style="background-image: url('images/BSG_GenAI.jpg');">
-	  </a>
-	  <div class="text mt-3 float-right d-block">
-
-		<h3 class="heading"><a href="hhttps://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf">BCG GenAI: Built a financial AI ChatBot</a></h3>
-	  </div>
+	
+	<div class="col-md-4 d-flex ftco-animate">
+		<div class="blog-entry justify-content-end">
+			<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf" 
+			   class="block-20 zoom-effect" 
+			   style="background-image: url('images/BSG_GenAI.jpg'); 
+					  background-size: cover; 
+					  background-position: center; 
+					  width: 100%; 
+					  height: 0; 
+					  padding-bottom: 75%; 
+					  border-radius: 12px;">
+			</a>
+			<div class="text mt-3 float-right d-block">
+				<h3 class="heading"><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/BCG%20/gabev3vXhuACr48eb_BCG_JiPaHx2ooMwh4Kscc_1718263260021_completion_certificate.pdf">BCG GenAI: Built a financial AI ChatBot</a></h3>
+			</div>
+		</div>
 	</div>
-  </div>
+	
 
 </div>
 <br>
@@ -456,7 +498,13 @@
 			<!-- - -  -->
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/AmitOmjeeSharma/AtliQ-Mart-Festive-Promotion-Analysis" class="block-20 zoom-effect" style="background-image: url('images/FMCG.png');">
+				<a href="https://github.com/AmitOmjeeSharma/AtliQ-Mart-Festive-Promotion-Analysis" class="block-20 zoom-effect" style="background-image: url('images/FMCG.png');
+				background-size: cover; 
+				background-position: center; 
+				width: 100%; 
+				height: 0; 
+				padding-bottom: 55%; 
+				border-radius: 12px;">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -467,7 +515,13 @@
 			</div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/AmitOmjeeSharma/MavenTech-CRM-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/CRM.png');">
+              <a href="https://github.com/AmitOmjeeSharma/MavenTech-CRM-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/CRM.webp');
+			  background-size: cover; 
+				background-position: center; 
+				width: 100%; 
+				height: 0; 
+				padding-bottom: 55%; 
+				border-radius: 12px;">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -478,7 +532,13 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/AmitOmjeeSharma/Telegram_Malicious_Activity_Detection" class="block-20 zoom-effect" style="background-image: url('images/TMAD.jpg');">
+              <a href="https://github.com/AmitOmjeeSharma/Telegram_Malicious_Activity_Detection" class="block-20 zoom-effect" style="background-image: url('images/TMAD.jpg');
+			  background-size: cover; 
+				background-position: center; 
+				width: 100%; 
+				height: 0; 
+				padding-bottom: 55%; 
+				border-radius: 12px;">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -494,7 +554,13 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/AmitOmjeeSharma/Hotel-Booking-Analysis-Using-Python" class="block-20 zoom-effect" style="background-image: url('images/HBA.png');">
+				<a href="https://github.com/AmitOmjeeSharma/Hotel-Booking-Analysis-Using-Python" class="block-20 zoom-effect" style="background-image: url('images/HBA.webp');
+				background-size: cover; 
+				background-position: center; 
+				width: 100%; 
+				height: 0; 
+				padding-bottom: 55%; 
+				border-radius: 12px;">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -505,7 +571,13 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/AmitOmjeeSharma/Stock-Market-Predication" class="block-20 zoom-effect" style="background-image: url('images/STOCK.png');">
+				<a href="https://github.com/AmitOmjeeSharma/Stock-Market-Predication" class="block-20 zoom-effect" style="background-image: url('images/STOCK.png');
+				background-size: cover; 
+				background-position: center; 
+				width: 100%; 
+				height: 0; 
+				padding-bottom: 55%; 
+				border-radius: 12px;">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -516,7 +588,13 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry">
-				<a href="https://github.com/AmitOmjeeSharma/IPL-2021-2023-Data-Insights-and-Analysis" class="block-20 zoom-effect" style="background-image: url('images/IPL.png');">
+				<a href="https://github.com/AmitOmjeeSharma/IPL-2021-2023-Data-Insights-and-Analysis" class="block-20 zoom-effect" style="background-image: url('images/IPL.webp');
+				background-size: cover; 
+				background-position: center; 
+				width: 100%; 
+				height: 0; 
+				padding-bottom: 55%; 
+				border-radius: 12px;">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -572,7 +650,7 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>More projects on<span> Github  </span> </h2>
-						<div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4>
+						<div class="heading"> <h4> I love solving business problems &amp; uncovering hidden data stories that drive impactful insights.</h4>
 						<br>
 						<p><a href="https://github.com/AmitOmjeeSharma" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
@@ -643,11 +721,12 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://youtube.com/@analyticswithsharmaji?si=EtP7BWt_Gg1-nHFD"><span class="icon-youtube"></span></a></li>
+					  
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/amit-omjee-sharma/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://twitter.com/AmitOmjeeSharma"><span class="icon-twitter"></span></a></li>
 					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-facebook"></span></a></li> -->
 				      <li class="ftco-animate"><a href="https://www.instagram.com/_sharmajii__/?igsh=M2xhOHd1aGljcDB3"><span class="icon-instagram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://youtube.com/@analyticswithsharmaji?si=EtP7BWt_Gg1-nHFD"><span class="icon-youtube"></span></a></li>
 					</ul>
 				<br>
 		   </div>
