--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			            <h2>A Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/amit-sharma-294642251/" class="btn btn-primary py-3 px-4">Know Me</a> 
+			            <p><a href="https://www.linkedin.com/in/amit-omjee-sharma/" class="btn btn-primary py-3 px-4">Know Me</a> 
 							<a href="https://github.com/AmitOmjeeSharma" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Amit Sharma</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>6 Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>6+ Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Nagpur, India</span></p>
 									  </div>
 									</div>
@@ -236,9 +236,9 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>PYTHON</span> <span class="pull-right">65%</span>
+									<span>Python</span> <span class="pull-right">70%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
@@ -279,6 +279,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI &amp; Tableau</span></li>
+									<li class="d-flex"><span>Google Workspace:</span> <span>Docs, Sheets, Gmail &amp; Google Drive</span></li>
 									<li class="d-flex"><span>Python Lib's:</span> <span> Pandas, NumPy, Matplotlib, Seaborn, TensorFlow &amp; Scikit</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span> MongoDB &amp; IBM SPSS</span></li>
 									<li class="d-flex"><span>OS:</span> <span>Windows &amp; Linux</span></li>
@@ -292,10 +293,10 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="6">0</span> <span>+</span>
+									<span class="number" data-number="7">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/amit-sharma-294642251/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/amit-omjee-sharma/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -331,9 +332,9 @@
 					<span class="date">Aug 2024 - Present</span>
 					<h2>Data Analyst Intern</h2>
 					<span class="position">Red Dot Foundation Global</span>
-					<p class="mt-4">Red Dot Foundation promotes safer cities by crowdsourcing data on sexual harassment, identifying local trends, and working with communities and authorities to prevent violence and create safer spaces. 
+					<p class="mt-4">Red Dot Foundation is a non-profit organization committed to making public and private spaces safer and more accessible for everyone, especially women and girls. We work on gender equity, safety and justice. 
 						<ul>
-							<li>Evaluated 4,188 global violence incidents from 1974-2023, identifying trends and patterns using Python and Excel.</li>
+							<li>Evaluated global violence incidents from 1974-2023, identifying trends and patterns using Python and Excel.</li>
 							<li>Designed Power BI dashboards showcasing insights across 10+ categories and identifying safety issues and 6 key hotspots.</li>
 							<li>Boosted report generation efficiency by 15% through streamlined data workflows and advanced visualization techniques.</li>
 						</ul>
@@ -367,7 +368,7 @@
 							<ul>
 								<li>Developed a high-accuracy stock market prediction model using machine learning and sentiment analysis, achieving an R-squared value of 0.9996.</li>
 								<li>Integrated comprehensive sentiment analysis of news headlines using VADER to enhance prediction accuracy.</li>
-								<li>DImplemented a feature-rich model incorporating multiple technical indicators like SMA, EMA, MACD, RSI, and OBV to capture market trends and patterns effectively.</li>
+								<li>Implemented a feature-rich model incorporating multiple technical indicators like SMA, EMA, MACD, RSI, and OBV to capture market trends and patterns effectively.</li>
 							</ul>
 						</p>
 					</div>
