--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 				<div class="text mt-3 float-right d-block">
   
 				  <h3 class="heading"><a href="https://github.com/AmitOmjeeSharma/IPL-2021-2023-Data-Insights-and-Analysis">IPL 2021-2023 Data Insights and Analysis using Power BI</a></h3>
-				  <p>Explore insights and predictions derived from three years of IPL data. Uncover top-performing players, teams, and predictive analytics for the 2024 season.</p>
+				  <p>Explore insights and predictions derived from 3 years of IPL data. Uncover top-performing players, teams, and predictive analytics for the 2024 season.</p>
 				</div>
 			  </div>
 			</div>
