--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI &amp; Tableau</span></li>
-									<li class="d-flex"><span>Google Workspace:</span> <span>Docs, Sheets, Gmail &amp; Google Drive</span></li>
+									<li class="d-flex"><span>Google Suite:</span> <span>Docs, Sheets, Gmail &amp; Google Drive</span></li>
 									<li class="d-flex"><span>Python Lib's:</span> <span> Pandas, NumPy, Matplotlib, Seaborn, TensorFlow &amp; Scikit</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span> MongoDB &amp; IBM SPSS</span></li>
 									<li class="d-flex"><span>OS:</span> <span>Windows &amp; Linux</span></li>
@@ -334,9 +334,9 @@
 					<span class="position">Red Dot Foundation Global</span>
 					<p class="mt-4">Red Dot Foundation is a non-profit organization committed to making public and private spaces safer and more accessible for everyone, especially women and girls. We work on gender equity, safety and justice. 
 						<ul>
-							<li>Evaluated global violence incidents from 1974-2023, identifying trends and patterns using Python and Excel.</li>
-							<li>Designed Power BI dashboards showcasing insights across 10+ categories and identifying safety issues and 6 key hotspots.</li>
-							<li>Boosted report generation efficiency by 15% through streamlined data workflows and advanced visualization techniques.</li>
+							<li>Led cross-functional teams to identify safety risks and hotspots through data analysis, delivering insights that informed critical decision-making.</li>
+							<li>Automated data workflows using Python, Excel, and Power BI, reducing processing time by 25% and streamlining reporting processes for 15% efficiency gains.</li>
+							<li>Delivered impactful presentations to senior management, driving the adoption of data-driven strategies that increased safety by 20%.</li>
 						</ul>
 					</p>
 				</div>
