--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 					<p class="mt-4">Red Dot Foundation is a non-profit organization committed to making public and private spaces safer and more accessible for everyone, especially women and girls. We work on gender equity, safety and justice. 
 						<ul>
 							<li>Led cross-functional teams to identify safety risks and hotspots through data analysis, delivering insights that informed critical decision-making.</li>
-							<li>Automated data workflows using Python, Excel, and Power BI, reducing processing time by 25% and streamlining reporting processes for 15% efficiency gains.</li>
+							<li>Automated data workflows using Python, Excel & Power BI, reducing processing time by 25% and streamlining reporting processes for 15% efficiency gains.</li>
 							<li>Delivered impactful presentations to senior management, driving the adoption of data-driven strategies that increased safety by 20%.</li>
 						</ul>
 					</p>
