--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Amit Sharma</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>6+ Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>1+ Years</span></p>
 										<p><span class="title-s">Address: </span> <span>Nagpur, India</span></p>
 									  </div>
 									</div>
@@ -271,19 +271,17 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>I'm a versatile problem solver skilled in SQL, Excel, Python and Power BI. With a creative mindset and strong problem-solving abilities,
-								   I excel in collaborative environments. My proven ability to analyze data, identify trends, and translate insights into actionable recommendations
-								   allows me to deliver impactful results. I'm passionate about continuously refining my skills to contribute effectively to organizational goals.</p>
+								<p>I'm a data analyst who enjoys finding patterns in data and turning them into useful insights. I work with SQL, Excel, Python, and Power BI to clean, explore, and visualize data in ways that support better decisions. I like solving problems, working with others, and learning new things that help me improve at what I do. Whether it's a team project or an independent task, I stay focused on making a real impact through my work.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
-									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi</span></li>
-									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI &amp; Tableau</span></li>
-									<li class="d-flex"><span>Google Suite:</span> <span>Docs, Sheets, Gmail &amp; Google Drive</span></li>
-									<li class="d-flex"><span>Python Lib's:</span> <span> Pandas, NumPy, Matplotlib, Seaborn, TensorFlow &amp; Scikit</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span> MongoDB &amp; IBM SPSS</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Data Analyst</span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology (B.Tech)</span></li>
+									<li class="d-flex"><span>Language(s):</span> <span>English, Hindi, Marathi</span></li>
+									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Tableau</span></li>
+									<!-- <li class="d-flex"><span>Google Suite:</span> <span>Docs, Sheets, Gmail &amp; Google Drive</span></li> -->
+									<li class="d-flex"><span>Python Libraries:</span> <span> Pandas, NumPy, Matplotlib, Seaborn, TensorFlow, Scikit-learn</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span> Google Suite, MongoDB, IBM SPSS</span></li>
 									<li class="d-flex"><span>OS:</span> <span>Windows &amp; Linux</span></li>
-									<li class="d-flex"><span>Interest:</span> <span> Reading, Photography</span></li>
+									<!-- <li class="d-flex"><span>Interest:</span> <span> Reading, Photography</span></li> -->
 									
 								</ul>
 							</div>
@@ -329,7 +327,7 @@
 
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
-					<span class="date">Aug 2024 - Present</span>
+					<span class="date">Aug 2024 - Mar 2025</span>
 					<h2>Data Analyst Intern</h2>
 					<span class="position">Red Dot Foundation Global</span>
 					<p class="mt-4">Red Dot Foundation is a non-profit organization committed to making public and private spaces safer and more accessible for everyone, especially women and girls. We work on gender equity, safety and justice. 
